@@ -1,3 +1,9 @@
+2002-11-10  Werner Koch  <wk@gnupg.org>
+
+	* assuan-pipe-connect.c (assuan_pipe_connect): Changed the order
+	of the dups to handle cases where we have already used fd 2 for
+	other things.
+
 2002-10-31  Neal H. Walfield  <neal@g10code.de>
 
 	* assuan-util.c: Include <ctype.h>.
